ipc/ipdl/test/ipdl/error/trans_WrongName.ipdl
protocol trans_WrongName {

child:
    async Msg();
    async __delete__();

state S1:
    call Msg goto S1;
    send __delete__();
};
